# hypeAI

./: .env.example  .gitignore  README.md  TradingAlgo.md  advanced_requirements.txt  demo.py  pyproject.toml  requirements.txt
src/: config_loader.py  gui.py  main.py
src/agent/: advanced_decision_maker.py  allocation_maker.py  decision_maker.py
src/indicators/: historical_data_fetcher.py  quant_indicator_calculator.py  taapi_client.py
src/trading/: hyperliquid_api.py
